# excel2tex

./: pyproject.toml
excel2tex/: Prop.py  __init__.py  __main__.py  excel2tex.py
